# hiyolabbot

./: .env.example  .gitignore  CLAUDE.md  README.md  discord_bot.py  pyproject.toml  snapshot.json  watcher.py
.github/workflows/: deploy.yml
src/hiyolab/: discord_bot.py  watcher.py
src/hiyolabbot/: discord_bot.py  main.py  talk_watcher.py  watcher.py
tests/: test_talk_watcher.py  test_watcher.py
