[project]
name = "hiyolab-bot"
version = "0.1.0"
description = "Bot that monitors updates to the Hiyori Hamagishi fan club page"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord.py",
    "requests",
    "beautifulsoup4",
    "lxml"
]


[build-system]
requires = ["uv"]
build-backend = "uv.build"
